# Project_2_Job_Search

./: README .md  config.py  main.py  pyproject.toml
data/: vacancies.json  vacancies_hh.json
src/: class_abstract.py  class_api.py  class_json.py  class_vacancy.py  utills.py
tests/: conftest.py  test_class_api.py  test_class_json.py  test_class_vacancy.py
