[project]
name = "progect-web-shop"
version = "0.1.0"
description = ""
authors = [
    {name = "grigorii goncharov",email = "grigoriy85@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
mypy = "^1.15.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
pytest-cov = "^6.1.1"


[tool.poetry.group.lint.dependencies]
mypy = "^1.15.0"

[tool.black]
line-length = 119
exclude = '''
/(
    \.venv
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.pytest_cache
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = [
    "^.venv/",
    "^.mypy_cache/",
    "^build/",
    "^dist/"
]

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = true

[tool.isort]
line_length = 119
skip = [".venv", ".git", "__pycache__", "build", "dist"]
